--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL="postgres://postgres.kfqerfhopyljkdettgig:ek1s6z792Qk$@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
 
-NEXTAUTH_URL=http://localhost:3000/api/auth/signin
+NEXTAUTH_URL=/api/auth/signin
 NEXTAUTH_SECRET=supersecretkeyforthissupersecretapp
